k8s/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: default
  name: 
  labels:
    app: pspdfkit-page
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pspdfkit-page
  template:
    metadata:
      labels:
        app: pspdfkit-page
    spec:
      containers:
        - name: pspdfkit-page
          image: kimjunte/pspdfkit:$GITHUB_REF_SLUG
          imagePullPolicy: Always
          ports:
            - name: port
              containerPort: 80
