k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: pspdfkit-page
  namespace: default
spec:
  ports:
    - protocol: TCP
      name: port
      port: 80
      targetPort: 80
  selector:
    app: pspdfkit-page
